# fastapi-demo

./: README.md  pyproject.toml
fastapi-demo/: database.py  main.py  models.py
